Bugfix where response observations were overwriting request observations